k8s/api.yaml
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: api
#   namespace: todo-lab
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: api
#   template:
#     metadata:
#       labels:
#         app: api
#     spec:
#       containers:
#         - name: api
#           image: arunkumarcarch/todo_api_2:v1.0.0
#           imagePullPolicy: IfNotPresent
#           ports:
#             - containerPort: 8000
#           envFrom:
#             - configMapRef:
#                 name: api-config
#             - secretRef:
#                 name: db-secret
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: todo-lab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: arunkumarcarch/todo_api_image_mon:85996917066a9b424efc000fbee55a4cc72601c0
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
