k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: todo-lab
spec:
  type: NodePort
  selector:
    app: api
  ports:
    - port: 8000
      targetPort: 8000
